--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Tron</title>
+    <link rel="stylesheet" type="text/css" href="./css/bike.css">
   </head>
+
   <body>
+    <figure class="tron-game"></figure>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
     <script src="./js/bundle.js"></script>
   </body>
