--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   </head>
 
   <body>
+    <div class="tron-logo">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/b/bb/TRON.png" />
+    </div>
+
     <figure class="tron-game"></figure>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
     <script src="./js/bundle.js"></script>
