--- a/index.html
+++ b/index.html
@@ -7,12 +7,27 @@
   </head>
 
   <body>
+    <audio controls>
+      <source src="./music/robot_rock.mp3" type="audio/mpeg">
+    </audio>
+
     <div class="tron-logo">
       <img src="https://upload.wikimedia.org/wikipedia/commons/b/bb/TRON.png" />
     </div>
-
     <figure class="tron-game"></figure>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
-    <script src="./js/bundle.js"></script>
+
+    <script src="./js/coord.js"></script>
+    <script src="./js/bike.js"></script>
+    <script src="./js/board.js"></script>
+    <script src="./js/view.js"></script>
+
+    <script>
+      $(function () {
+        var rootEl = $('.tron-game');
+        new View(rootEl);
+      });
+    </script>
+
   </body>
 </html>
