start game function on View

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     <script>
       $(function () {
         var rootEl = $('.tron-game');
-        new View(rootEl);
+        var view = new View(rootEl);
+        view.startGame();
       });
     </script>
 
