--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
     </div>
 
     <div class="intro-outro">
+      <h1 class="start-display" id="instructions">Instructions</h1>
+      <div class="start-display" id="instructions">
+        Don't crash! You are the <span style="color: blue;">blue</span> light cycle.
+        Avoid the walls and trails of light left by you and your opponent.
+        Navigate your light cycle by the arrow keys.
+      </div>
       <h1 class="start-display" id="start">START</h1>
       <h1 class="end-display" id="player1-win">You win!</h1>
       <h1 class="end-display" id="computer-win">Computer wins!</h1>
@@ -35,7 +41,7 @@
       $(".end-display").hide();
 
       $("#start").on("click", function() {
-        $("#start").hide();
+        $(".start-display").hide();
         var rootEl = $('.tron-game');
         var view = new View(rootEl);
         view.startGame();
