--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <title>Tron</title>
     <link rel="stylesheet" type="text/css" href="./css/bike.css">
     <link href='https://fonts.googleapis.com/css?family=Orbitron|Audiowide' rel='stylesheet' type='text/css'>
+    <link href="tron-favicon.ico" rel="icon" type="image/x-icon" />
   </head>
 
   <body>
     <audio controls>
-      <source src="./music/robot_rock.mp3" type="audio/mpeg">
+      <source src="./music/derezzed.mp3" type="audio/mpeg">
     </audio>
     <div class="tron-logo">
       <img src="https://upload.wikimedia.org/wikipedia/commons/b/bb/TRON.png" />
