--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <audio controls>
+    <audio controls autoplay>
       <source src="./music/derezzed.mp3" type="audio/mpeg">
     </audio>
     <div class="tron-logo">
