fix instructions css

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         Have a <span style="color: #FF4500;">Frenemy</span>?
       </div>
       <h1 class="start-display" id="two-player">2 PLAYERS</h1>
-      <div class="start-display" id="instructions">
-        (<span style="color: #FF4500; font-size: 18px;">Player 2</span> uses WASD)
+      <div class="start-display" id="instructions" style="font-size: 18px;">
+        (<span style="color: #FF4500">Player 2</span> uses WASD)
       </div>
 
       <h1 class="end-display" id="you-win">You win!</h1>
