--- a/index.html
+++ b/index.html
@@ -39,8 +39,18 @@
       <h1 class="end-display" id="replay">PLAY AGAIN</h1>
     </div>
 
-    <figure class="tron-game">
-    </figure>
+    <div class="display">
+      <div class="difficulty">
+        <h1 class="easy">Easy</h1>
+        <h1 class="medium">Medium</h1>
+        <h1 class="hard">Hard</h1>
+      </div>
+
+      <figure class="tron-game">
+      </figure>
+
+      <div class="rightspace"></div>
+    </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
     <script src="./js/coord.js"></script>
@@ -61,6 +71,7 @@
 
       $("#two-player").on("click", function() {
         $(".start-display").hide();
+        $(".easy, .medium, .hard").hide();
         // Replay needs access to the # of players after the game has
         // ended. Is there a better way to do this?
         window.players = 2;
