--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
 
     <div class="display">
       <div class="leftspace">
-        <div class="score">
+        <div class="score" style="display: none;">
           <h1 class="left-header"> Wins </h1>
           <span class="blue-wins">0</span>  -
           <span class="red-wins">0</span>
         </div>
 
-        <div class="difficulty">
+        <div class="difficulty" style="display: none;">
           <h1 class="left-header"> Difficulty </h1>
           <h1 class="easy">Easy</h1>
           <h1 class="medium">Medium</h1>
@@ -69,23 +69,21 @@
 
     <script>
       $(".end-display").hide();
-      $(".easy, .medium, .hard").hide();
       var rootEl = $('.tron-game');
       var view;
       window.wins = {blue: 0, red: 0}
 
       $("#start").on("click", function() {
         $(".start-display").hide();
-        $(".easy, .medium, .hard").show();
+        $(".score, .difficulty").show();
         var view = new View(rootEl);
         view.startGame();
       })
 
       $("#two-player").on("click", function() {
         $(".start-display").hide();
+        $(".score").show();
 
-        // Replay needs access to the # of players after the game has
-        // ended. Is there a better way to do this?
         window.players = 2;
         var view = new View(rootEl, window.players);
         view.startGame();
